cyberchef/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyberchef
spec:
  selector:
    app: cyberchef
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
