cyberchef/52-httproute-public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cyberchef
  namespace: cyberchef
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https-white-fm
  hostnames:
    - cyberchef.white.fm
  rules:
    - backendRefs:
        - name: authentik-server
          namespace: authentik
          port: 80
