cyberchef/53-httproute-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cyberchef-internal
  namespace: cyberchef
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https-internal-white-fm
  hostnames:
    - cyberchef.internal.white.fm
  rules:
    - backendRefs:
        - name: cyberchef
          port: 80
